--- a/easyheals/package.json
+++ b/easyheals/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.11.0",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
+    "react-star-ratings": "^2.3.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
